--- a/WWR/styles/style.css
+++ b/WWR/styles/style.css
@@ -1,40 +1,62 @@
+/* Rubik Dirt and Zain */
+@import url(https://fonts.googleapis.com/css2?family=Rubik+Dirt&family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap);
+
 body{
+    font-family: Zain, Helvetica, sans-serif;
     background-color: #CACCC2;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+h2{
+    margin: 0;
 }
 header{
     background-color: #0D7E8E;
 }
-nav{
-    text-align: center;
-}
+
 nav a{
 color: #CACCC2;
 text-decoration: none;
+text-align: center;
+padding: 35px;
 }
 .home-title{
+    font-family: "Rubik Dirt", Times, serif;
     color: #0F2332;
+    font-size: 2em;
+    margin-top: 10px;
 }
+
 nav a:hover{
     background-color: #C46D5E;
     color: #0F2332;
 }
 .book{
-    background-color: #CACCC2;
-    color: #0F2332;
+    background-color: #0F2332;
+    color: #CACCC2;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .join{
     background-color: #CACCC2;
     color: #0F2332;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover{
-    background-color: #0F2332;
-    color: #CACCC2
+    background-color: #C46D5E;
+    color: #0f2332;
 }
 .join:hover{
-    background-color: #0F2332;
-    color: #CACCC2
+    background-color: #C46D5E;
+    color: #0f2332
 }
 #background{
     background-color: #0F2332;
@@ -42,13 +64,22 @@ nav a:hover{
 }
 .msg{
     background-color: #0D7E8E;
+    line-height: 1.5em;
+    padding: 35px;
 }
 .msg h2{
+    font-family: "Rubik Dirt", Times, serif;
     color: #0F2332;
+}
+.msg p{
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 footer{
     background-color: #0D7E8E;
     color: #CACCC2;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer a{
     color: #CACCC2;
@@ -60,6 +91,9 @@ footer a:hover{
 }
 footer p{
     font-size: 1.2em;  
+}
+footer .social img{
+    padding-top: 15px;
 }
 footer p a:hover{
     text-decoration: underline;
@@ -80,18 +114,35 @@ footer p a:hover{
 .button-box{
     text-align: center;
 }
-main{
+
+main section{
     text-align: center;
 }
-section{
-    text-align: center;
+main section img{
+    box-sizing: border-box;
 }
 h4{
     color: #0F2332;
 }
+.rivers-card{
+    margin: 200px 0;
+}
+.camping-card{
+    margin: 200px 0;
+}
+.rapids-card{
+    margin: 200px 0;
+}
+.card-img{
+    border: 10px solid #0F2332;
+}
 .logo{
     width: 80px;
 }
+.logo_link{
+    padding-top: 5px;
+}
 .icon{
     width: 80px;
+    padding-top: 10px;
 }
