--- a/WWR/styles/style.css
+++ b/WWR/styles/style.css
@@ -208,8 +208,67 @@ h4{
     padding-top: 10px;
 }
 
+#head{
+    grid-column: 1/3;
+    font-size: 3rem;
+    text-align: center;
+    grid-row: 1/2; 
+    color: #CACCC2;
+    position: absolute; 
+    bottom: 250px; 
+    left: 50%; 
+    transform: translateX(-50%);
+    white-space: nowrap;
+}
 
-
+#img-head{
+    place-items: center;
+    grid-column: 1/3;
+    grid-row: 1/2;
+    align-self: center;
+    z-index: -1;
+    width: 100%;
+}
+#faq-content{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: top;
+    box-sizing: border-box;
+    column-gap: 2em;
+    position: relative;
+    color: #0F2332;
+}
+.ql, .al{
+    text-align: left;
+    grid-column: 1/2;
+}
+.qr, .ar{
+    text-align: left;
+    grid-column: 2/3;
+}
+.ql, .qr{
+    font-weight: bold;
+    font-size: 1.5em;
+    margin: 0;
+}
+.seperator{
+    width: 100%;
+    grid-column: 1/3;
+    margin: 0 auto;
+    
+}
+#qr-1{
+    grid-row: 2/3;
+}
+#qr-2{
+grid-row: 5/6;
+}
+#qr-3{
+grid-row: 8/9;
+}
+#new-content{
+    margin: 0px 6rem;
+}
 
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
