--- a/Stormlight/style.css
+++ b/Stormlight/style.css
@@ -1,101 +1,163 @@
 @import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
 
 :root {
-  /* change the values below to your colors from your palette */
-  --primary-color: #1E2657   ;
-  --secondary-color: #454B73 ;
-  --accent1-color: #9D695A;
-  --accent2-color: #F1F3F1;
+    /* change the values below to your colors from your palette */
+    --primary-color: #1E2657;
+    --secondary-color: #454B73;
+    --accent1-color: #9D695A;
+    --accent2-color: #F1F3F1;
 
-  /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC", Garamond, Serif;
-  --paragraph-font: Helvetica, Verdana, sans-serif;
+    /* change the values below to your chosen font(s) */
+    --heading-font: "IM Fell French Canon SC", Garamond, Serif;
+    --paragraph-font: Helvetica, Verdana, sans-serif;
 
-  /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #1E2657;  /* headlines on a white background */ 
-  --headline-color-on-color: #F1F3F1; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #1E2657; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #F1F3F1; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #454B73  ;
-  --nav-link-color: #F1F3F1;
-  --nav-background-color: #454B73;
-  --nav-hover-link-color: #454B73;
-  --nav-hover-background-color: #F1F3F1;
+    /* these colors below should be chosen from among your palette colors above */
+    --headline-color-on-white: #1E2657;
+    /* headlines on a white background */
+    --headline-color-on-color: #F1F3F1;
+    /* headlines on a colored background */
+    --paragraph-color-on-white: #1E2657;
+    /* paragraph text on a white background */
+    --paragraph-color-on-color: #F1F3F1;
+    /* paragraph text on a colored background */
+    --paragraph-background-color: #454B73;
+    --nav-link-color: #F1F3F1;
+    --nav-background-color: #454B73;
+    --nav-hover-link-color: #454B73;
+    --nav-hover-background-color: #F1F3F1;
 }
-*{
+
+* {
     margin: 0;
     padding: 0;
     text-decoration: none;
     box-sizing: border-box;
 }
-.logo_link{
+
+.logo_link {
     width: 100px;
 }
-.logo{
+
+.logo {
     max-width: 100px;
     display: block;
 }
 
-h1, h2{
+#logo-box {
+    z-index: 1000;
+}
+
+h1,
+h2 {
     font-family: var(--heading-font);
 }
-p{
-font-family: var(--paragraph-font);
+
+p {
+    font-family: var(--paragraph-font);
 }
-#navigation{
+
+#navigation {
     display: grid;
     grid-template-columns: 100px 1fr;
     align-items: center;
 }
-a{
-color: var(--nav-link-color);
+
+a {
+    color: var(--nav-link-color);
 }
-nav{
+
+nav {
     display: flex;
     justify-content: space-evenly;
     background-color: var(--nav-background-color);
-
+    z-index: 1000;
 }
-nav a{
+
+nav a {
     padding: 36.25px;
     font-size: 1.5em;
-    
+
 }
-nav a:hover{
+
+nav a:hover {
     background-color: var(--nav-hover-background-color);
     color: var(--nav-hover-link-color);
 }
-img{
+
+img {
     max-width: 100%;
 }
-#title-div{
-    display: grid;
-    grid-template-columns: 1fr;
+
+#title-div img {
+    position: absolute;
+    top: -200px;
+    left: 0;
+    width: 100%;
+    z-index: -2;
+    object-fit: cover;
+
+}
+
+#title-div {
+    position: fixed;
+    width: 100vw;
+    height: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+    z-index: 2;
+}
+
+#title-div h1,
+#title-div h2 {
+    position: relative;
+    color: var(--headline-color-on-color);
+    z-index: -1;
 }
 
 
 
-#home-box{
+#home-box {
     background-color: var(--primary-color);
     color: var(--paragraph-color-on-color);
     justify-items: center;
     padding: 5em;
     line-height: 2.35em;
     font-size: 1.75em;
+    position: relative;
+    top: 100vh;
+    z-index: 2;
 }
-#home-box p{
+
+#home-box p {
     max-width: 600px;
     text-align: center;
+
+}
+
+#map {
+    position: absolute;
+    top: 200vh;
+    left: 0;
+    width: 100%;
+    z-index: 3;
+    object-fit: cover;
 }
 
 
-
-footer{
+footer {
     background-color: var(--nav-background-color);
     display: grid;
     grid-template-columns: 100px 80px 1fr;
+    z-index: 1000;
+    width: 100%;
+    position: absolute;
+    top: 318vh;
 }
-#site-link{
+
+#site-link {
     grid-column: 2/3;
     background-color: var(--accent1-color);
     padding: 10px 0px;
@@ -106,23 +168,27 @@ footer{
     align-self: center;
 
 }
-#site-link:hover{
+
+#site-link:hover {
     background-color: var(--primary-color);
 }
-footer p{
+
+footer p {
     color: var(--paragraph-color-on-color);
-text-align: center;
-max-width: 350px;
-align-content: center;
-justify-self: center;
+    text-align: center;
+    max-width: 350px;
+    align-content: center;
+    justify-self: center;
 }
-footer p a{
+
+footer p a {
     background-color: var(--accent1-color);
     font-weight: bold;
     padding: 0px 3px;
     border-radius: 5px;
 }
-footer a:hover{
+
+footer a:hover {
     background-color: #1E2657;
     color: var(--accent2-color);
 }
