--- a/Stormlight/style.css
+++ b/Stormlight/style.css
@@ -174,6 +174,8 @@ img {
     text-indent: 5%;
     padding-top: 2%;
     padding-bottom: 6%;
+    line-height: 1.3em;
+    font-size: 1.2em;
 }
 
 footer {
