--- a/Stormlight/style.css
+++ b/Stormlight/style.css
@@ -115,6 +115,8 @@ img {
     position: relative;
     color: var(--headline-color-on-color);
     z-index: -1;
+    font-size: 3em;
+    top: 50px;
 }
 
 
@@ -154,6 +156,9 @@ img {
     padding: 0px 4px;
     border-radius: 5px;
 }
+.here-link:hover{
+    background-color: var(--headline-color-on-white);
+}
 #magic-h1{
     text-align: center;
     padding: 45px;
@@ -175,7 +180,7 @@ img {
 .magic-p{
     text-indent: 5%;
     padding-top: 2%;
-    padding-bottom: 6%;
+    padding-bottom: 10%;
     line-height: 1.3em;
     font-size: 1.2em;
     color: var(--paragraph-color-on-white);
