--- a/Stormlight/style.css
+++ b/Stormlight/style.css
@@ -185,6 +185,99 @@ img {
     font-size: 1.2em;
     color: var(--paragraph-color-on-white);
 }
+/* World Gallery */
+#gallery-hero{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+}
+
+.gallery-hero-img{
+    max-width: 50%;
+    display: block;
+}
+
+#gallery-header{
+    grid-column: 1/3;
+    text-align: center;
+    padding: 3%;
+    font-size: 2.2em;
+    color: var(--headline-color-on-white);
+}
+.gallery-p{
+    color: var(--paragraph-color-on-color);
+}
+#gallery-main{
+    margin: 0 10%;
+}
+#section-1{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 30px;
+    margin-top: 3%;
+    gap: 20px;
+    background-color: var(--accent1-color);
+    border-radius: 12px;
+}
+#section-1 p{
+    grid-columns: 1/2;
+    grid-row: 1/3;
+    font-size: 1.7em;
+    align-content: center;
+}
+#section-1 img{
+    max-width: 100%;
+    box-shadow: 5px 5px 10px #00000075;
+    border-radius: 10px;
+}
+#section-2{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 30px;
+    margin-top: 10%;
+    gap: 20px;
+    background-color: var(--accent1-color);
+    border-radius: 12px;
+}
+#section-2 p{
+    grid-columns: 1/2;
+    grid-row: 1/3;
+    font-size: 1.7em;
+    align-content: center;
+}
+#section-2 img{
+    max-width: 100%;
+    box-shadow: 5px 5px 10px #00000075;
+    border-radius: 10px;
+}
+
+
+
+#gallery-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    padding: 2%;
+    gap: 1%;
+    padding-bottom: 10%;
+    padding-top: 15%;
+}
+#gallery-grid img{
+  max-width: 75%;  
+  transition: transform .4s;
+  box-shadow: 5px 5px 10px #1E265788;
+  border: 5px solid var(--headline-color-on-white);
+  border-radius: 15px;
+}
+#gallery-grid img:hover{
+    transform: scale(1.8);
+
+}
+
+
+
+
 
 footer {
     background-color: var(--nav-background-color);
